# spdlog-example

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  add.h  spdlog_basic.cpp  spdlog_basic_sinks.cpp  spdlog_periodic.cpp  spdlog_rotating.cpp  spdlog_stopwatch.cpp
test/: CMakeLists.txt  add_test.cpp
tool/cmake/: create_symlink_to_build.cmake  enable_memcheck.cmake  enable_sanitizers.cmake  install_gbenchmark.cmake  install_gtest.cmake  link_spdlog.cmake  set_compile_props.cmake  set_warnings_as_errors.cmake
